/***********************************************************************
X3 ChangeLog

2009-07-15  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Crash fix with the spin command for hosts with
	a long length.

2009-07-05  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/chanserv.c: Fix for crash on ChanServ.UNSUSPEND

2009-06-27  Matthew Beeching  <jobe@mdbnet.co.uk>

	* src/modcmd.c: Fix for bug #2813183

2009-06-20  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Removed lastmod from gline and shun. (from the
	srvx merge)

	* src/gline.c: Removed lastmod from gline and shun. (from the srvx 
	merge)

	* src/gline.h: Removed lastmod from gline and shun. (from the srvx
	merge)

	* src/mod-blacklist.c: Removed lastmod from gline and shun. (from
	the srvx merge)

	* src/mod-sockcheck.c: Removed lastmod from gline and shun. (from
	the srvx merge)

	* src/opserv.c: Removed lastmod from gline and shun. (from the srvx 
	erge)

	* src/proto-p10.c: Removed lastmod from gline and shun. (from the srvx
	merge)

	* src/shun.c: Removed lastmod from gline and shun. (from the srvx merge)

	* src/shun.h: Removed lastmod from gline and shun. (from the srvx merge)

	* src/spamserv.c: Removed lastmod from gline and shun. (from the srvx
	merge)

2009-06-05  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Bug fix for SF Bug #2801434.

2009-06-02  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/hash.h: Updated client PRIVS.

	* src/proto-p10.c: Updated client PRIVS.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/tools.c: Re done the extended channel ban code so that it works
	like the ircd code.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/tools.c: Return -1 with invalid extended bans.

2009-06-01  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Tweak the ban functions to allow invalid bans to
	be picked up.

	* src/tools.c: Return -1 with invalid extended bans.
