@@ -1,6 +1,10 @@
 /***********************************************************************
 X3 ChangeLog
 
+2009-07-16  Matthew Beeching  <jobe@mdbnet.co.uk>
+
+	* src/nickserv.c: Added support for NickServ with LDAP enabled
+
 2009-07-15  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
 	* src/chanserv.c: Crash fix with the spin command for hosts with
